--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -30,8 +30,7 @@ This footer template is shared across all the pages.
       <span>{{t "Published with"}} <a href="https://ghost.org" target="_blank" rel="noopener">Ghost</a></span>
     </p>
     <p class="m-footer-copyright jslicense">
-      <a href="{{asset " html/javascript.html"}}" rel="jslicense" style="display:none !important">{{t "JavaScript
-        license information"}}</a>
+      <a href="{{asset " html/javascript.html"}}" rel="jslicense">{{t "JavaScript license information"}}</a>
     </p>
   </div>
 </footer>
