--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -29,8 +29,8 @@ This footer template is shared across all the pages.
       <span>&nbsp; &bull; &nbsp;</span>
       <span>{{t "Published with"}} <a href="https://ghost.org" target="_blank" rel="noopener">Ghost</a></span>
     </p>
-    <p class="m-footer-copyright jslicense">
+    {{!-- <p class="m-footer-copyright jslicense">
       <a href="{{asset " html/javascript.html"}}" rel="jslicense">{{t "JavaScript license information"}}</a>
-    </p>
+    </p> --}}
   </div>
 </footer>
