--- a/post.hbs
+++ b/post.hbs
@@ -148,6 +148,11 @@ into the {body} of the default.hbs template --}}
             </div>
           </div>
         </section>
+
+        <section class="m-comments">
+          <script defer src="https://commento.rollinghills.fun/js/commento.js"></script>
+          <div id="commento"></div>
+        </section>
         {{!-- If you want to embed comments, this is a good place to do it! --}}
         {{!--
           <section class="m-comments">
