--- a/post.hbs
+++ b/post.hbs
@@ -83,8 +83,9 @@ into the {body} of the default.hbs template --}}
             </div>
           </div>
         </div>
+
         {{!-- Email subscribe form at the bottom of the page --}}
-        <section class="m-subscribe-section js-newsletter">
+        {{!-- <section class="m-subscribe-section js-newsletter">
           <div class="l-wrapper in-post">
             <div class="m-subscribe-section__content">
               <div class="m-subscribe-section__text">
@@ -99,6 +100,9 @@ into the {body} of the default.hbs template --}}
             </div>
           </div>
         </section>
+        --}}
+
+
         <section class="m-author">
           <div class="m-author__content">
             <div class="m-author__picture">
