--- a/post.hbs
+++ b/post.hbs
@@ -84,7 +84,7 @@ into the {body} of the default.hbs template --}}
           </div>
         </div>
 
-        {{!-- Email subscribe form at the bottom of the page --}}
+        {{!-- Email subscribe form at the bottom of the page ::: Temporary--}}
         {{!-- <section class="m-subscribe-section js-newsletter">
           <div class="l-wrapper in-post">
             <div class="m-subscribe-section__content">
