--- a/post.hbs
+++ b/post.hbs
@@ -85,7 +85,7 @@ into the {body} of the default.hbs template --}}
         </div>
 
         {{!-- Email subscribe form at the bottom of the page ::: Temporary--}}
-        {{!-- <section class="m-subscribe-section js-newsletter">
+        <section class="m-subscribe-section js-newsletter">
           <div class="l-wrapper in-post">
             <div class="m-subscribe-section__content">
               <div class="m-subscribe-section__text">
@@ -100,7 +100,7 @@ into the {body} of the default.hbs template --}}
             </div>
           </div>
         </section>
-        --}}
+        
 
 
         <section class="m-author">
