removed secondary menu from the Top

--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -47,14 +47,14 @@ This header template is shared across all the pages.
                 {{navigation}}
               {{/if}}
               {{#if @site.secondary_navigation}}
-                <li class="more">
+               {{!--  <li class="more">
                   <span>
                     <a href="javascript:void(0);" class="js-open-secondary-menu">
                       {{t "More"}}
                       <span class="icon-chevron-down" aria-hidden="true"></span>
                     </a>
                   </span>
-                </li>
+                </li> --}}
               {{/if}}
               <li class="submenu-option js-submenu-option">
                 <button class="m-icon-button in-menu-main more js-toggle-submenu" aria-label="{{t "Open submenu"}}">
